--- a/app/src/main/res/layout/activity_academic_advisor_portal.xml
+++ b/app/src/main/res/layout/activity_academic_advisor_portal.xml
@@ -10,15 +10,17 @@
         android:layout_width="368dp"
         android:layout_height="wrap_content"
 
-        android:orientation="vertical"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp">
+        app:layout_constraintVertical_bias="0.498">
 
 
         <TextView
@@ -33,8 +35,8 @@
 
         <ImageButton
             android:id="@+id/newRequestButton"
-            android:layout_width="368dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:onClick="goNewActivity"
             app:srcCompat="@drawable/list_square_button"
             tools:layout_editor_absoluteX="8dp"
@@ -52,8 +54,8 @@
 
         <ImageButton
             android:id="@+id/oldRequestButton"
-            android:layout_width="368dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:onClick="goOldActivity"
             app:srcCompat="@drawable/old_list_square_button"
             tools:layout_editor_absoluteX="8dp"
