--- a/app/src/main/res/layout/activity_check_request.xml
+++ b/app/src/main/res/layout/activity_check_request.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.prototype.CheckRequest">
 
-    <ScrollView
-        android:layout_width="340dp"
-        android:layout_height="379dp"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/listReqStd"
+        android:layout_width="368dp"
+        android:layout_height="551dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
@@ -16,8 +17,5 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.162">
-
-    </ScrollView>
+        android:layout_marginBottom="8dp" />
 </android.support.constraint.ConstraintLayout>
